fix header carousel malfunction + properly center logo on mobile

--- a/src/styles/sass/layout/_mobile.scss
+++ b/src/styles/sass/layout/_mobile.scss
@@ -20,6 +20,15 @@
             &_toggle_button {
                 display: block;
             }
+
+            &_logo {
+                position: absolute;
+                margin-left: auto;
+                margin-right: auto;
+                left: 0;
+                right: 0;
+                text-align: center;
+            }
         }
     }
 
